// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input/ino-input-file DragAndDrop smoke-test 1`] = `
<div id="root-inner">
  <ino-input-file class="customizable-input"
                  accept
                  autofocus="false"
                  disabled="false"
                  multiple="false"
                  required="false"
                  label="Select a file to upload"
                  drag-and-drop="true"
                  drag-and-drop-text="Drag your files here"
                  drag-and-drop-secondary-text="or"
  >
    <div class="ino-input-file__dnd">
      <div class="ino-input-file__dnd-text">
        <label>
          Drag your files here
        </label>
        <label>
          or
        </label>
      </div>
      <ino-button class="ino-input-file__button"
                  icon-leading
      >
        <ino-icon slot="icon-leading">
        </ino-icon>
        Select a file to upload
      </ino-button>
      <input class="ino-input-file__native-element"
             accept
             type="file"
             aria-hidden="true"
      >
    </div>
  </ino-input-file>
</div>
`;

exports[`Input/ino-input-file Playground smoke-test 1`] = `
<div id="root-inner">
  <ino-input-file class="customizable-input"
                  accept
                  autofocus="false"
                  disabled="false"
                  multiple="false"
                  required="false"
                  label="Select a file to upload"
                  drag-and-drop="false"
                  drag-and-drop-text="Drag your files here"
                  drag-and-drop-secondary-text="or"
  >
    <div class="ino-input-file__composer">
      <ino-button class="ino-input-file__button"
                  icon-leading
      >
        <ino-icon slot="icon-leading">
        </ino-icon>
        Select a file to upload
      </ino-button>
      <input class="ino-input-file__native-element"
             accept
             type="file"
             aria-hidden="true"
      >
    </div>
  </ino-input-file>
</div>
`;
